fix new stream button alignment

--- a/src/pages/common/components/CommonTabPanels/components/FeedTab/components/NewStreamButton/NewStreamButton.module.scss
+++ b/src/pages/common/components/CommonTabPanels/components/FeedTab/components/NewStreamButton/NewStreamButton.module.scss
@@ -2,11 +2,3 @@
   width: 0.625rem;
   height: 0.625rem;
 }
-
-.buttonMenu {
-  position: absolute;
-  left: 100%;
-  top: 50%;
-  transform: translate(-100%, -50%);
-  margin-left: -1.3125rem;
-}
